--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
